--- a/src/styles/normalize.less
+++ b/src/styles/normalize.less
@@ -1,21 +1,11 @@
 
-// html {
-// 	overflow: hidden;
-// 	height: 100%;
-// }
-
-// body {
-// 	height: 100%;
-// 	overflow: auto;
-// }
-
 body {
+	// display: block;
 	margin: 0;
 	padding: 0;
-	outline: none;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	-webkit-overflow-scrolling: touch;
+	// outline: none;
+	// -webkit-font-smoothing: antialiased;
+	// -moz-osx-font-smoothing: grayscale;
 }
 
 ul, li {
