--- a/src/styles/scrollbar.less
+++ b/src/styles/scrollbar.less
@@ -1,9 +1,9 @@
 
-html.any-chrome {
+html.chrome {
 
     ::-webkit-scrollbar {
-        width: 10px;
-        height: 10px;
+        width: 12px;
+        height: 12px;
         cursor: pointer;
     
         @media (min-width: 1600px) {
@@ -19,14 +19,14 @@ html.any-chrome {
     
     
     ::-webkit-scrollbar-thumb {
-        background: #F0DB4F;
+        background: @color-primary;
         border: none;
         border-radius: 0;
-    
-        &:hover
-        &:active {
-            background: #508CBE
-        }
+    }
+
+    ::-webkit-scrollbar-thumb:hover,
+    ::-webkit-scrollbar-thumb:active {
+        background: @color-accent;
     }
     
     
@@ -34,15 +34,16 @@ html.any-chrome {
         background: @color-dark;
         border: none;
         border-radius: 0px;
-    
-        &:hover
-        &:active {
-            background: #111;
-        }
     }
-    
+
+    // ::-webkit-scrollbar-track:hover,
+    // ::-webkit-scrollbar-track:active {
+    //     background: #111;
+    // }
+
+
     ::-webkit-scrollbar-corner {
-        background: transparent
+        background: transparent;
     }
 
 }
