--- a/src/styles/animations.less
+++ b/src/styles/animations.less
@@ -1,10 +1,22 @@
 
 @keyframes fade-in {
     0% {
-        opacity: 0;
+        opacity: 0
     }
 
     100% {
-        opacity: 1;
+        opacity: 1
+    }
+}
+
+@keyframes bounce {
+	0% {
+        transform: translate3d(0, 0, 0)
+    }
+	50% {
+        transform: translate3d(0, 20%, 0)
+    }
+	100% {
+        transform: translate3d(0, 0, 0)
     }
 }
