--- a/src/styles/animations.less
+++ b/src/styles/animations.less
@@ -20,3 +20,12 @@
         transform: translate3d(0, 0, 0)
     }
 }
+
+@keyframes move-down {
+	0% {
+        transform: translate3d(0, -100%, 0)
+    }
+	100% {
+        transform: translate3d(0, 0, 0)
+    }
+}
