--- a/src/styles/section.less
+++ b/src/styles/section.less
@@ -10,6 +10,7 @@ section {
 	align-items: center;
 	justify-content: center;
 	transition: all 300ms;
+	will-change: opacity;
 
 	&.visible {
 		opacity: 1;
